@@ -86,7 +86,7 @@ module BoxGrinder
 
     it "should upload to a S3 bucket" do
       package_helper = mock(PackageHelper)
-      package_helper.should_receive(:package).with( {:disk => "adisk"}, {:plugin_info => nil} ).and_return("a_built_package.zip")
+      package_helper.should_receive(:package).with( {:disk => "adisk"}, "build/appliances/i686/fedora/11/full/s3-plugin/tmp/full-1.0-fedora-11-#{@arch}-raw.tgz" ).and_return("a_built_package.zip")
 
       PackageHelper.should_receive(:new).with(@config, @appliance_config, @dir, {:log => @log, :exec_helper => @exec_helper}).and_return(package_helper)
 
@@ -99,21 +99,21 @@ module BoxGrinder
       key.should_receive(:put).with('abc', 'private')
 
       bucket = mock('Bucket')
-      bucket.should_receive(:key).with('/a_built_package.zip').and_return( key )
+      bucket.should_receive(:key).with("full-1.0-fedora-11-#{@arch}-raw.tgz").and_return( key )
 
       s3.should_receive(:bucket).with('bucket', true).and_return(bucket)
       s3.should_receive(:close_connection)
 
-      File.should_receive(:size).with('a_built_package.zip').and_return(23234566)
+      File.should_receive(:size).with("build/appliances/i686/fedora/11/full/s3-plugin/tmp/full-1.0-fedora-11-#{@arch}-raw.tgz").and_return(23234566)
 
-      @plugin.should_receive(:open).with('a_built_package.zip').and_return("abc")
+      @plugin.should_receive(:open).with("build/appliances/i686/fedora/11/full/s3-plugin/tmp/full-1.0-fedora-11-#{@arch}-raw.tgz").and_return("abc")
 
       @plugin.upload_to_bucket(:disk => "adisk")
     end
 
     it "should NOT upload to a S3 bucket because file exists" do
       package_helper = mock(PackageHelper)
-      package_helper.should_receive(:package).with( {:disk => "adisk"}, {:plugin_info => nil} ).and_return("a_built_package.zip")
+      package_helper.should_receive(:package).with( {:disk => "adisk"}, "build/appliances/i686/fedora/11/full/s3-plugin/tmp/full-1.0-fedora-11-#{@arch}-raw.tgz").and_return("a_built_package.zip")
 
       PackageHelper.should_receive(:new).with(@config, @appliance_config, @dir, {:log => @log, :exec_helper => @exec_helper}).and_return(package_helper)
 
@@ -125,12 +125,12 @@ module BoxGrinder
       key.should_receive(:exists?).and_return(true)
 
       bucket = mock('Bucket')
-      bucket.should_receive(:key).with('/a_built_package.zip').and_return( key )
+      bucket.should_receive(:key).with("full-1.0-fedora-11-#{@arch}-raw.tgz").and_return( key )
 
       s3.should_receive(:bucket).with('bucket', true).and_return(bucket)
       s3.should_receive(:close_connection)
 
-      File.should_receive(:size).with('a_built_package.zip').and_return(23234566)
+      File.should_receive(:size).with("build/appliances/i686/fedora/11/full/s3-plugin/tmp/full-1.0-fedora-11-#{@arch}-raw.tgz").and_return(23234566)
 
       @plugin.upload_to_bucket(:disk => "adisk")
     end
